--- a/lib/tefla_web/templates/layout/root.html.heex
+++ b/lib/tefla_web/templates/layout/root.html.heex
@@ -4,6 +4,8 @@
     <meta charset="utf-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <!-- TODO: add favicon -->
+    <link rel="apple-touch-icon" href="/images/fav.ico"/>  <!-- TODO: make this link to valid favicon -->
     <%= csrf_meta_tag() %>
     <%= live_title_tag assigns[:page_title] || "Tefla", suffix: " · Phoenix Framework" %>
     <link phx-track-static rel="stylesheet" href={Routes.static_path(@conn, "/assets/app.css")}/>
