--- a/lib/tefla_web/templates/layout/app.html.heex
+++ b/lib/tefla_web/templates/layout/app.html.heex
@@ -1,5 +1,10 @@
-<main class="container">
-  <p class="alert alert-info" role="alert"><%= get_flash(@conn, :info) %></p>
-  <p class="alert alert-danger" role="alert"><%= get_flash(@conn, :error) %></p>
+<main>
+  <%= render(TeflaWeb.Layout.SharedView, "header.html", assigns) %>
+
+  <section class="container">
+    <p class="alert alert-info" role="alert"><%= get_flash(@conn, :info) %></p>
+    <p class="alert alert-danger" role="alert"><%= get_flash(@conn, :error) %></p>
+  </section>
+
   <%= @inner_content %>
 </main>
